# typednotes

./: .dockerignore  .env.example  .env.template  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  input.css  secrets.yaml
.github/workflows/: deploy.yml  desktop-release.yml
container/: Dockerfile
database/: Cargo.toml
db/: Cargo.toml  README.md  build.rs  lib.rs
db/migrations/: 20250123051425_initial.sql  20250126074721_init.sql  20250126080445_auth.sql  20250126080445_users.sql  20250126082014_rbac.sql  20250126082014_rbac_and_auth.sql  20250126083235_orgs_groups.sql  20250126083235_teams.sql  20250126092347_rls.sql  20250126092554_models.sql  20250126094257_notes.sql
desktop/: Cargo.toml
desktop/src/: main.rs
files/: Cargo.toml
files/src/: files.rs  lib.rs
infra/: Makefile  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
mobile/: Cargo.toml
mobile/src/: main.rs
server/: Cargo.toml  config.toml
server/docker/: README.md
server/migrations/: 0_database.sql  1_database.sql
server/services/compose/: README.md  compose.yaml
server/src/: application.rs  auth.rs  database.rs  lib.rs  settings.rs  user.rs  utils.rs
ui/: Cargo.toml
ui/src/: echo.rs  files.rs  hero.rs  lib.rs  login.rs
web/: Cargo.toml
web/src/: main.rs
web/src/views/: home.rs
