[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "server",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }

# workspace
ui = { path = "ui" }
server = { path = "server" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
