[workspace]
resolver = "2"
members = [
    "ui",
    "files",
    "web",
    "desktop",
    "mobile",
    "server",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }

# workspace
ui = { path = "ui" }
files = { path = "files" }
server = { path = "server" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
