[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", features = [
    "with-time-0_3",
    "with-serde_json-1",
] }
cornucopia_async = "0.6"
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive"] }
time = { version = "0.3", default-features = false,  features = ["formatting"] }
pgvector = { version = "0.4", features = ["postgres"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"