[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = [
    "macros",
    "migrate",
    "postgres",
    "tls-native-tls",
    "runtime-tokio",
    "bigdecimal",
    "rust_decimal",
    "json",
    "time",
    "chrono",
    "ipnetwork",
    "mac_address",
    "uuid",
], optional = true }
serde = "1"
execute = "0.2"
anyhow = "1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dep:tokio", "dep:sqlx"]