[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-cli-config = { vesrion="0.6", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower-sessions = { version = "0.13", optional = true }
tower-sessions-sqlx-store = { version = "0.14", features = [ "postgres"], optional = true }
sqlx = { version = "0.8", features = [
    "macros",
    "migrate",
    "postgres",
    "tls-native-tls",
    "runtime-tokio",
    "bigdecimal",
    "rust_decimal",
    "json",
    "time",
    "chrono",
    "ipnetwork",
    "mac_address",
    "uuid",
], optional = true }
time = "0.3"
serde = "1"
execute = "0.2"
anyhow = "1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dep:dioxus-cli-config", "dep:tokio", "dep:sqlx", "dep:axum", "dep:tower-sessions", "dep:tower-sessions-sqlx-store"]