[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-cli-config = { version = "0.6", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true }
axum_session = { version = "0.14", optional = true }
axum_session_auth = { version = "0.14", optional = true }
axum_session_sqlx = { version = "0.3", features = [ "postgres", "tls-rustls"] , optional = true }
sqlx = { version = "0.8", features = [
    "macros",
    "migrate",
    "postgres",
    "tls-native-tls",
    "runtime-tokio",
    "bigdecimal",
    "rust_decimal",
    "json",
    "time",
    "chrono",
    "ipnetwork",
    "mac_address",
    "uuid",
], optional = true }
config = { version = "0.15", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
time = "0.3"
execute = "0.2"
anyhow = "1"
openidconnect = "3.5"
oauth2 = "4.4"
async-trait = "0.1"

[features]
default = []
server = ["dioxus/server", "dep:dioxus-cli-config", "dep:tokio", "dep:sqlx", "dep:axum", "dep:tower", "dep:tower-http", "dep:axum_session", "dep:axum_session_auth", "dep:axum_session_sqlx"]
